Fix background for failed build container tabs and tighten whitespace

--- a/resources/assets/css/inner/builds.less
+++ b/resources/assets/css/inner/builds.less
@@ -368,7 +368,6 @@
     padding-left: @sideLineWidth;
     .command-text {
       font-weight: bolder;
-      margin: 0 1em;
     }
     .status {
       float: left;
